# lms-cli

./: .flake8  .gitignore  Makefile  README.md  main.py  mypy.ini  pyproject.toml  requirements-semantic.txt  requirements.txt
.github/instructions/: *.instructions.md
ai-cli/: Makefile  pyproject.toml  requirements-dev.txt  requirements-embeddings.txt  requirements.txt
ai-cli/ai_cli/: __main__.py
ai-cli/ai_cli/cli/: completer.py  display.py  repl.py
ai-cli/ai_cli/core/: agent.py  agent_registry.py  chunker.py  config_manager.py  embedding_index.py  embedding_provider.py  llm_client.py  permission_manager.py  session_manager.py  skill_registry.py  task_manager.py  task_orchestrator.py  tool_registry.py  vector_store.py  workspace.py
ai-cli/ai_cli/tools/: base.py  call_agent.py  find_files.py  read_file.py  search_files.py  tasks.py  tool_manager.py  write_file.py
ai-cli/ai_cli/utils/: ignore_filter.py  logging_utils.py
ai-cli/docs/: HOWTO_custom_tools.md  architecture.md  design_agents.md  design_display.md  design_embeddings.md  design_mcp.md  design_repl.md  design_task_system.md  project_plan.md  technical_requirements.md  tool_design__task_planner.md  vulnerabilities.md
ai-cli/tests/: test_agent.py  test_agent_registry.py  test_call_agent.py  test_completer.py  test_config_manager.py  test_display.py  test_embedding_index.py  test_embedding_provider.py  test_find_files.py  test_ignore_filter.py  test_llm_client.py  test_logging_utils.py  test_main.py  test_permission_manager.py  test_read_file.py  test_repl.py  test_search_files.py  test_session_manager.py  test_skill_registry.py  test_sub_agent_display.py  test_task_manager.py  test_task_orchestrator.py  test_tasks_tools.py  test_tool_base.py  test_tool_manager.py  test_tool_registry.py  test_workspace.py  test_write_file.py
ai_cli/: __main__.py
ai_cli/cli/: display.py  repl.py
ai_cli/core/: agent.py  agent_registry.py  chunker.py  config_manager.py  embedding_index.py  embedding_provider.py  mcp_manager.py  permission_manager.py  session_manager.py  skill_registry.py  task_manager.py  task_orchestrator.py  tool_registry.py  workspace.py
ai_cli/tools/: base.py  bash.py  call_agent.py  find_files.py  read.py  read_file.py  search_files.py  skills.py  tasks.py  tool_manager.py  update.py  write.py  write_file.py
ai_cli/utils/: ignore_filter.py
cli/: interface.py
config/: config.yaml  config.yaml.bup  config.yaml.example
core/: embedding_manager.py  embedding_manager_faiss.py  file_reference_parser.py  lm_studio_client.py  tool_registry.py  workspace.py
docs/: architecture.ditaa.txt  architecture.md  design_agents.md  design_embeddings.md  design_task_system.md  project_plan.md  tool_execution.ditaa.txt  vulnerabilities.md
lms_cli/cli/: interface.py  rich_interface.py
lms_cli/core/: context.py  embedding_manager.py  file_reference_parser.py  lm_studio_client.py  session_handler.py  tool_registry.py  workspace.py
lms_cli/tools/: file_search.py  generate_uuid.py  read_file.py  run_test.py  write_file.py
plans/: bash-tool.md
tests/: test_agent.py  test_agent_registry.py  test_bash.py  test_call_agent.py  test_chunker.py  test_completer.py  test_display.py  test_embedding_index.py  test_find_files.py  test_ignore_filter.py  test_lm_studio_client.py  test_main.py  test_mcp_manager.py  test_permission_manager.py  test_read.py  test_read_file.py  test_repl.py  test_search_files.py  test_session_manager.py  test_skills_tool.py  test_sub_agent_display.py  test_task_manager.py  test_task_orchestrator.py  test_tasks_tools.py  test_tool_base.py  test_tool_manager.py  test_tool_registry.py  test_update.py  test_vector_store.py  test_workspace.py  test_write.py  test_write_file.py
tools/: file_search.py  read_file.py  write_file.py
