[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ai-cli"
version = "0.1.11.dev5"
description = "AI-powered CLI assistant"
requires-python = ">=3.10"
dependencies = [
    "openai",
    "pillow",
    "python-slugify",
    "pyyaml",
    "prompt_toolkit",
    "python-dotenv",
    "rich",
    "tiktoken",
    "websockets",
]

[project.scripts]
ai-cli = "ai_cli.__main__:main"

[project.optional-dependencies]
dev = [
    "build",
    "mypy",
    "pytest",
    "ruff",
    "types-PyYAML",
    "types-tqdm",
]
# Embedding index and semantic search (embeddings.enabled: true in config).
# tomli is only needed on Python <3.11; tomllib is stdlib on 3.11+.
embeddings = [
    "numpy>=1.24",
    "tqdm>=4.64",
    "xxhash>=3.0",
    "tomli>=2.0; python_version < '3.11'",
]
# Language-aware chunking via tree-sitter (chunking.strategy: semantic).
# Requires [embeddings] — install as: pip install ai-cli[embeddings,semantic]
semantic = [
    "tree-sitter>=0.21",
    "tree-sitter-python",
    "tree-sitter-cpp",
    "tree-sitter-rust",
    "tree-sitter-lua",
    "tree-sitter-go",
    "tree-sitter-javascript",
    "tree-sitter-typescript",
    "tree-sitter-bash",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["ai_cli*"]
exclude = ["env*", "tests*"]

[tool.pytest.ini_options]
testpaths = ["tests"]

# ---------------------------------------------------------------------------
# Ruff — linting and formatting
# ---------------------------------------------------------------------------

[tool.ruff]
line-length = 88
target-version = "py310"
exclude = ["env", ".ai-cli"]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes (undefined names, unused imports, etc.)
    "I",   # isort (import ordering)
    "UP",  # pyupgrade (modernise syntax)
    "B",   # flake8-bugbear (common bugs and design issues)
    "C4",  # flake8-comprehensions
    "SIM", # flake8-simplify
]
ignore = [
    "E501", # line too long — ruff format handles this
]

[tool.ruff.lint.isort]
known-first-party = ["ai_cli"]

# ---------------------------------------------------------------------------
# Mypy — static type checking
# ---------------------------------------------------------------------------

[tool.mypy]
python_version = "3.10"
files = ["ai_cli"]
strict = false
warn_unused_ignores = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
no_implicit_optional = true

[[tool.mypy.overrides]]
# tree-sitter and its language grammar packages are optional at runtime;
# they ship no stubs and are guarded by try/except ImportError.
module = ["tree_sitter", "tree_sitter.*"]
ignore_missing_imports = true
